# utilsx

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .vale.ini  404.html  LICENSE  Makefile  README.md  index.html  lines_counter.py  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  ruff.toml
.github/workflows/: code_qa.yml  publish_docs.yml  pypi_publish.yml  quality_assurance.yml
.vale/styles/config/vocabularies/UtilsX/: accept.txt
api/: index.html
collections/: index.html
constants/: index.html
decorators/: index.html
dictionaries/: index.html
docs/: api.md  collections.md  constants.md  decorators.md  dictionaries.md  exceptions.md  functional.md  index.md  math.md  pandas.md  text.md  typevars.md
exceptions/: index.html
functional/: index.html
math/: index.html
pandas/: index.html
scripts/: checks_docs_completeness.py
search/: search_index.json
src/utilsx/: __init__.py  charts.py  collections.py  decorators.py  dicts.py  exceptions.py  functional.py  math.py  sequences.py  text.py  typevars.py
src/utilsx/constants/: __init__.py  _numbers.py  _physics.py  _time.py  numbers.py  physics.py  time.py
src/utilsx/dicts/: __init__.py  _combination.py  _filtering.py  modification.py  sorting.py
src/utilsx/math/: __init__.py  _collections.py  _division.py  _rounding.py  _scalar_ops.py  collections.py  division.py  downscaling.py  rounding.py  scalar_ops.py
src/utilsx/pandas/: __init__.py  _missing.py  missing.py
tests/: test_collections.py  test_decorators.py  test_dicts.py  test_exceptions.py  test_math.py  test_sequences.py  test_text.py
tests/constants/: test_numbers.py  test_physics.py  test_time.py
tests/pandas/: test_missing.py
text/: index.html
typevars/: index.html
