[project]
name = "utilsx"
version = "0.0.1"
description = "Generic utilities for Python projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "codespell==2.4.1",
    "mypy~=1.15.0",
    "pre-commit==4.2.0",
    "pytest~=8.3.5",
    "ruff==0.11.8",
]
