[project]
name = "utilsx"
version = "0.0.0a5"
authors = [
  { name="Yury Fedotov", email="author@example.com" },
]
description = "A collection of useful constants and generic functions for Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
pandas = [
    "pandas>=1.5",
]
all = [
    "utilsx[pandas]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = "all"

[dependency-groups]
dev = [
    "codespell==2.4.1",
    "mypy~=1.15.0",
    "pandas-stubs>=1.5",
    "pre-commit==4.2.0",
    "pytest~=8.3.5",
    "ruff==0.11.8",
    "vale~=3.11.2",
]
docs = [
    "mkdocs-material~=9.6.12",
    "mkdocstrings-python~=1.16.10",
]
